[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywire-language-server"
authors = [
    { name="Reece Holmdahl", email="reecelikesramen@duck.com" },
]
version = "0.1.0"
description = "Language Server Protocol implementation for PyWire"
requires-python = ">=3.11"
    "pygls>=1.3.0",
    "pyright>=1.1.0",
    "pywire",  # Depends on main package
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pywire_language_server"]