[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pywire-language-server"
authors = [
    { name="Reece Holmdahl", email="reece@pywire.dev" },
]
dynamic = ["version"]
description = "Language Server Protocol implementation for PyWire"
requires-python = ">=3.11"
dependencies = [
    "pygls>=1.3.0",
    "pyright>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pywire_language_server"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pywire_language_server/_version.py"